--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,16 @@ a:link {color:black}
 a:visited {color:black}
 
 ul {list-style-type:none;padding: 0; margin:0;line-height:200%;}
+
+#wrapper{float:center; margin:0px auto; width:900px;
+background-color: white; 
+min-height:500px; 
+margin-bottom:0px; margin-top:0px;
+padding:10px 10px 10px 10px;
+overflow: auto;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
+min-width:600px;
+}
 			
 .hideable {display:none}
 
@@ -173,16 +183,6 @@ box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2); min-width:350px;min-height:350px;
 	background-color: rgba(0,0,0,0.4);
 	z-index:1;
 }
-
-#wrapper{float:center; margin:0px auto; width:900px;
-background-color: white; 
-min-height:500px; 
-margin-bottom:0px; margin-top:0px;
-padding:10px 10px 10px 10px;
-overflow: auto;
-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
-min-width:300px;
-}
 		
 #wijaInfo {margin:0 auto;float:center;width:100%;overflow:hidden; }
 			
@@ -195,12 +195,12 @@ min-width:300px;
 			
 #androidBadge {float:right;}
 
-#androidBadge img{max-height:100px;}
+#androidBadge img{max-height:90px;}
 
 #firstPost {float:left; margin-right:50px;margin-left:20px;padding:20x 20px;}
 #firstPost p{text-align:left; font-size:100%}
 
 #footer {clear:both; padding:2px 0;float:bottom; overflow:hidden;
          width:100%;text-align:center;margin-bottom:0;}
-#footer p{font-size:80%;font-weight:italic;margin-top:2.5em;text-align:center;}
+#footer p{font-size:80%;font-weight:italic;margin-top:4em;text-align:center;}
 			
